# clowclow

./: .gitignore  CLAUDE.md  LICENSE  README.md  debug.py  pyproject.toml  pytest.ini
.serena/: project.yml
.serena/memories/: architecture_patterns.md  code_style_and_conventions.md  codebase_structure.md  project_overview.md  pydantic_ai_message_structure.md  pydantic_ai_testing_best_practices.md  suggested_commands.md  task_completion_checklist.md  test_suite_architecture.md
src/clowclow/: claude_client.py  claude_code_model.py
tests/: CRITICAL_ANALYSIS.md  README.md  ROOT_CAUSE_ANALYSIS.md  TEST_IMPROVEMENTS.md  TOOL_CALLING_LIMITATION.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_basic.py  test_agent_multimodal.py  test_agent_multiturn.py  test_agent_streaming.py  test_agent_structured.py  test_agent_tools.py  test_error_handling.py  test_message_inspection.py  test_model_compatibility.py  test_system_prompt_multiturn.py  test_usage_tracking.py
tests/unit/: __init__.py  test_claude_client.py  test_claude_code_model.py  test_dynamic_model_builder.py  test_model_protocol.py  test_multimodal_handler.py  test_request_handler.py
