[project]
name = "clowclow"
version = "0.1.0"
description = "Make Claude Code available to Pydantic AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic-ai>=1.0.5",
]

[project.scripts]
clowclow = "clowclow:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
        "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "inline-snapshot>=0.13.0",
    "dirty-equals>=0.8.0",
    "coverage>=7.0.0",
]
